# school-lunch

./: .gitignore  Main.py  README.md  alert.py  push_button.sh  pyproject.toml  requirements.txt
code/: call_api_jiwon.py  data_import.py  date_edit.py  pre_parquet.py  schema.json  school_code.py  school_code_jiwon.py  school_lunch.py
dags/: data_import.py
pages/: 1_lunch.py  2_trends.py  3_Analysis.py  4_Analysis(not use2).py  4_Analysis.py  4_Data_for_Analysis.py
temp/: 4_Analysis(not use).py  4_Analysis(not-use-chart4).py  4_Analysis(year-class).py  4_Data_for_Analysis(keep).py  4_backup.py  example.parquet  school_code.json  test.parquet  test2.parquet
temp/legacy_v0.5/: data_import.py  pre_parquet.py
