[project]
name = "school-lunch"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "jiwon1118", email = "b23386585@gmail.com"},
]

dependencies = ["pandas>=2.2.3", "requests>=2.32.3", "pyarrow>=19.0.1", "jupyter>=1.1.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
