[project]
name = "school-lunch"
version = "0.9.0"
description = "Default template for PDM package"
authors = [
    {name = "jiwon1118", email = "b23386585@gmail.com"},
]

dependencies = ["pandas>=2.2.3", "requests>=2.32.3", "pyarrow>=19.0.1", "jupyter>=1.1.1", "streamlit>=1.44.1", "fsspec>=2025.3.2", "gcsfs>=2025.3.2", "google-cloud-bigquery>=3.31.0", "db-dtypes>=1.4.2", "plotly>=6.0.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pyspark>=3.5.5",
    "google-cloud-storage>=3.1.0",
]
